port: restore Animation Director 1.21 Java baseline